--- a/pkg/spyglass/lenses/metadata/style.css
+++ b/pkg/spyglass/lenses/metadata/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .failed {
-    color: #ff4040;
+    color: #FF5277;
 }
 
 .passed {
